--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "maileroo/maileroo-php-sdk": "^2.0",
         "stripe/stripe-php": "^19.1"
     },
     "require-dev": {
